# intro-to-vibe-scripting

./: README.md  main.py  pyproject.toml  setup.ps1  setup.sh
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
assets/: financial-data.csv  prompt_one_shot_uv_scripts.md  stock_report.pptx  trip-options.csv
notebooks/: my_trip_plan.csv  one-shot-scripting-with-uv-and-ai.ipynb  one-shot-scripting-with-uv-and-ai.md  people.csv  python-fundamentals-intro.ipynb
notebooks/.ipynb_checkpoints/: python-fundamentals-intro-checkpoint.ipynb
scripts/: ai_script_generator.py  dashboard_analytics.py  generated_script.py  organize_downloads.py  report_finances.py  sample_script_nasa.py  table_to_powerpoint.py
