[project]
name = "intro-to-vibe-scripting"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "anthropic>=0.52.2",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "openai>=1.83.0",
    "pandas>=2.2.3",
]
